<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizzappv11.MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/question_1_container"
            style="@style/question_container_style">

            <TextView
                style="@style/question_style"
                android:text="@string/question_1"/>

            <RadioGroup
                android:id="@+id/question_1_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/question_1_first_logo_radio"
                    android:text=""
                    style="@style/question_radio_button_style"
                    />

                <RadioButton
                    android:id="@+id/question_1_second_logo_radio"
                    android:text=""
                    style="@style/question_radio_button_style"
                    />

                <RadioButton
                    android:id="@+id/question_1_third_logo_radio"
                    android:text=""
                    style="@style/question_radio_button_style"
                    />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    style="@style/radio_group_linear_layout_style">

                    <ImageView
                        android:id="@+id/question_1_first_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/phone1" android:contentDescription="@string/todo" />

                </LinearLayout>

                <LinearLayout
                    style="@style/radio_group_linear_layout_style">

                    <ImageView
                        android:id="@+id/question_1_second_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/ethernet" android:contentDescription="@string/todo" />

                </LinearLayout>

                <LinearLayout
                    style="@style/radio_group_linear_layout_style">

                    <ImageView
                        android:id="@+id/question_1_third_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/phone2"
                        android:contentDescription="@string/todo" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_2_container"
            style="@style/question_container_style">
            <TextView
                style="@style/question_style"
                android:text="@string/question_2"/>

            <RadioGroup
                android:id="@+id/question_2_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/question_2_first_logo_radio"
                    android:text=""
                    style="@style/question_radio_button_style"
                    />

                <RadioButton
                    android:id="@+id/question_2_second_logo_radio"
                    android:text=""
                    style="@style/question_radio_button_style"
                    />

                <RadioButton
                    android:id="@+id/question_2_third_logo_radio"
                    android:text=""
                    style="@style/question_radio_button_style"
                    />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    style="@style/radio_group_linear_layout_style">

                    <ImageView
                        android:id="@+id/question_2_first_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/amd" android:contentDescription="@string/todo" />

                </LinearLayout>

                <LinearLayout
                    style="@style/radio_group_linear_layout_style">

                    <ImageView
                        android:id="@+id/question_2_second_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/aclogo" android:contentDescription="@string/todo" />

                </LinearLayout>

                <LinearLayout
                    style="@style/radio_group_linear_layout_style">

                    <ImageView
                        android:id="@+id/question_2_third_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/konami" android:contentDescription="@string/todo" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_3_container"
            style="@style/question_container_style">

            <TextView
                style="@style/question_style"
                android:text="@string/question_3"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    style="@style/checkbox_group_layout_style">

                    <CheckBox
                        android:id="@+id/question_3_first_checkbox"
                        android:text=""
                        style="@style/question_checkbox_style"
                        />

                    <ImageView
                        android:id="@+id/question_3_first_checkbox_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/fedora" android:contentDescription="@string/todo" />

                </LinearLayout>

                <LinearLayout
                    style="@style/checkbox_group_layout_style">

                    <CheckBox
                        android:id="@+id/question_3_second_checkbox"
                        android:text=""
                        style="@style/question_checkbox_style"
                        />

                    <ImageView
                        android:id="@+id/question_3_second_checkbox_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/centos" android:contentDescription="@string/todo" />

                </LinearLayout>

                <LinearLayout
                    style="@style/checkbox_group_layout_style">

                    <CheckBox
                        android:id="@+id/question_3_third_checkbox"
                        android:text=""
                        style="@style/question_checkbox_style"
                        />

                    <ImageView
                        android:id="@+id/question_3_third_checkbox_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/apple" android:contentDescription="@string/todo" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_4_container"
            style="@style/question_container_style">
            <TextView
                style="@style/question_style"
                android:text="@string/question_4"/>

            <ImageView
                android:id="@+id/question_4_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ubuntu" android:contentDescription="@string/todo" />

            <EditText
                android:id="@+id/question_4_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint=""/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/question_5_container"
            style="@style/question_container_style">

            <TextView
                style="@style/question_style"
                android:text="@string/question_5"/>

            <RadioGroup
                android:id="@+id/question_5_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/question_5_first_radio"
                    android:text=""
                    style="@style/question_radio_button_style"
                    />

                <RadioButton
                    android:id="@+id/question_5_second_radio"
                    android:text=""
                    style="@style/question_radio_button_style"
                    />

                <RadioButton
                    android:id="@+id/question_5_third_radio"
                    android:text=""
                    style="@style/question_radio_button_style"
                    />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    style="@style/radio_group_linear_layout_style">

                    <ImageView
                        android:id="@+id/question_5_first_radio_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/f2" android:contentDescription="@string/todo" />

                </LinearLayout>

                <LinearLayout
                    style="@style/radio_group_linear_layout_style">

                    <ImageView
                        android:id="@+id/question_5_second_radio_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/del" android:contentDescription="@string/todo" />

                </LinearLayout>

                <LinearLayout
                    style="@style/radio_group_linear_layout_style">

                    <ImageView
                        android:id="@+id/question_5_third_radio_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/f4" android:contentDescription="@string/todo" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_6_container"
            style="@style/question_container_style">

            <TextView
                style="@style/question_style"
                android:text="@string/question_6"/>

            <ImageView
                android:id="@+id/question_6_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/a8pin" android:contentDescription="@string/todo" />

            <EditText
                android:id="@+id/question_6_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint=""/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_7_container"
            style="@style/question_container_style">
            <TextView
                style="@style/question_style"
                android:text="@string/question_7"/>

            <ImageView
                android:id="@+id/question_7_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/wlan" android:contentDescription="@string/todo" />

            <EditText
                android:id="@+id/question_7_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint=""/>
        </LinearLayout>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:onClick="checkQuiz"/>
    </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
